# events-parsing

./: .eslintrc.cjs  .gitignore  README.md  docker-compose-dev.yaml  docker-compose.dev.yaml  docker-compose.yaml  formatter.bat  formatter.sh  package-lock.json  package.json  ruff.toml  tsconfig.json
main_service/: .dev.env  .gitignore  .tests.env  Dockerfile  alembic.ini  bot.py  entrypoint.sh  init.py  migrations.dockerfile  pyproject.toml  pytest.ini
main_service/application/: parser_function.py  transactions.py
main_service/application/attachments/: dtos.py  gateways.py
main_service/application/auth/: dtos.py  enums.py  exceptions.py
main_service/application/events/: dtos.py
main_service/application/mails/: dtos.py  factory.py  gateway.py
main_service/application/notifications/: factory.py  gateway.py
main_service/application/organizations/: dtos.py
main_service/application/users/: dtos.py
main_service/dev/: .env  entrypoint.sh
main_service/docker/coordinator/: Dockerfile  entrypoint.sh
main_service/docker/main_service/: entrypoint.sh  main_service.py
main_service/domain/: exceptions.py
main_service/domain/attachments/: dtos.py  entities.py  enums.py  exceptions.py  repositories.py
main_service/domain/events/: dtos.py  entities.py  enums.py  exceptions.py  repositories.py
main_service/domain/mails/: dtos.py  entities.py  enums.py  exceptions.py  repositories.py
main_service/domain/notifications/: dtos.py  entities.py  enums.py  exceptions.py  repositories.py
main_service/domain/organizations/: dtos.py  entities.py  enums.py  exceptions.py  repositories.py
main_service/domain/users/: dtos.py  entities.py  (+4 more)
main_service/infrastructure/: config.py  server.py
parser/: Dockerfile  classification.py  config.py  events.py  extraction.py  gateway.py  hackathonrf_parser.py  init_prompt.txt  init_prompt_for_list.txt  main.py  models.py  ocr.py  pipeline.py  pyproject.toml
parser/dev/: Dockerfile  entrypoint.sh
parser/pipeline/: __init__.py  classification.py  extraction.py  ocr.py  pipeline.py
parser/scripts/: fix_fixture_typing.py  optional_replace.py  pydantic_model_search.py
scripts/: events.py  hackathonrf_parser.py  pyproject.toml
scripts/py/: csv_dump_to_sql.py
scripts/sql/: insert_organizations.sql  insert_user.sql  organization_test_data.sql
(+627 files in other folders)
