[tool.poetry]
name = "events-parsing"
version = "0.1.0"
description = ""
authors = ["AlexandrVino <alexander-vin0@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.34.0"
fastapi = "^0.115.12"
pydantic = {extras = ["email"], version = "^2.11.3"}
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
dishka = "^1.5.2"
adaptix = "^3.0.0b9"
alembic-postgresql-enum = "^1.7.0"
faststream = "^0.5.37"
aio-pika = "^9.5.5"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
bcrypt = "^4.3.0"
aioimaplib = "^2.0.1"
pytz = "^2025.2"
ruff = "^0.11.6"
pydantic-settings = "^2.9.1"
python-multipart = "^0.0.20"
miniopy-async = "^1.22.1"
aiogram = "^3.20.0.post0"
aiosmtplib = "^4.0.1"

[tool.poetry.group.tests.dependencies]
testcontainers = {extras = ["minio", "postgres", "rabbitmq"], version = "^4.10.0"}
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
