[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["crazyhamster310 <ruhlyadev.alex@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
